# bitrep

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  FORMAT.md  LICENSE-MIT  README.md  SECURITY.md  codecov.yml  deny.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  fuzz.yml  kani-heavy.yml  release.yml  scorecard.yml  supply-chain.yml
benches/: reductions.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml  README.md  build-npm.sh
bindings/wasm/src/: lib.rs
conformance/: bitrep_ref.py  check.py  relsketch_check.py  relsketch_ref.py  relsketch_vectors.json  vectors.json
demo/wasm/: Cargo.toml
demo/wasm/src/: lib.rs
demo/web/: bitrep_demo_wasm.wasm  index.html
dev/bench/: data.js
examples/: convergent_stats.rs  deterministic_training.rs  float_gcounter.rs  gen_relsketch_vectors.rs  gen_vectors.rs  merkle_sum_tree.rs  otel_bridge.rs  parallel_sum.rs  quantile_receipt.rs
fuzz/: .gitignore  Cargo.toml
fuzz/artifacts/codec_robustness/: crash-6aa902b4f52e976479ec8a26ee9541c94f5f5186
fuzz/artifacts/quantile_decode/: crash-c6b293db505b4551319896fde772d7e9421dab66  crash-f328ad02a31c15a4544792afb69422de2d0a36bd
fuzz/artifacts/sub_roundtrip/: crash-627ff7b749050841c52cc9332bd538b18bffc08a
fuzz/artifacts/sum_vs_oracle/: crash-d053b2db8e006419f7bd1991da81ad4b70aba991
fuzz/artifacts/toolkit_decoders/: crash-21df8442b8c04031be3112b1bcae1bb2cfc36848
fuzz/fuzz_targets/: codec_robustness.rs  quantile_decode.rs  sub_roundtrip.rs  sum_vs_oracle.rs  toolkit_decoders.rs
paper/: exact-float-crdts.tex
probes/: probe_c_training.py
proofs/: FloatGCounter.lean  OrderInvariance.lean  RelSketchMerge.lean  RoundNearestEven.lean  ToolkitAlgebra.lean  check.sh
proofs/comparator/: Challenge.lean  Solution.lean  config.json  lake-manifest.json  lakefile.toml
src/: acc.rs  covmat.rs  dot.rs  fast.rs  hist.rs  kani_proofs.rs  lattice.rs  lib.rs  merge.rs  quantile.rs  receipt.rs  replicated.rs  stats.rs
tests/: exact_tier.rs  golden.rs  nist_strd.rs  properties.rs  quantile_probe.rs  quantile_realdata.rs  quantile_redteam.rs  stats.rs  toolkit.rs
tests/data/: README.md  nasa_http_jul95_sizes.csv
