[package]
name = "bitrep-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
bitrep = { path = ".." }

[[bin]]
name = "sum_vs_oracle"
path = "fuzz_targets/sum_vs_oracle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codec_robustness"
path = "fuzz_targets/codec_robustness.rs"
test = false
doc = false
bench = false
