[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bitrep"
version = "0.2.1"
description = "Exact, order-invariant, bit-identical floating-point reductions and CRDTs (Rust core)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Kyle Clouthier", email = "kyle@simgen.dev" }]
keywords = ["deterministic", "reproducible", "summation", "crdt", "exact-arithmetic"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/KyleClouthier/bitrep"

[tool.maturin]
features = ["pyo3/extension-module"]
