[package]
name = "bitrep-wasm"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
authors = ["Kyle Clouthier <kyle@simgen.dev>"]
license = "MIT OR Apache-2.0"
description = "WebAssembly/JS bindings for bitrep: exact, order-invariant, bit-identical floating-point reductions and CRDTs."
repository = "https://github.com/KyleClouthier/bitrep"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitrep = { path = "../..", features = ["stats", "receipts"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
